--- a/style/style.css
+++ b/style/style.css
@@ -5,103 +5,22 @@
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box
 }
-nav {
-    width: 100%;
-    height: 90px;
-    border-top: 2px solid #572EE5;
+.trending-gifos img {
+    width: 357px;
+    height: 275px;
 }
-nav .nav-container {
-    font-size: 13px;
-    margin: 23px auto;
-    display: flex;
-    width: 85%;
-
+.gifos-box-button1 {
+    background: url("../assets/icon-fav.svg");
+    width: 32px;
+    height: 32px;
 }
-nav .list {
-    width: 80%;
-    display: flex;
-    justify-content: flex-end;
-
+.gifos-box-button2 {
+    background: url("../assets/icon-download.svg");
+    width: 32px;
+    height: 32px;
 }
-nav .list ul {
-    display: flex;
-    width: 50%;
-    justify-content: space-around;
-    align-items: center;
-
-}
-nav .list ul li {
-    list-style: none;
-}
-nav .logo {
-    width: 10%;
-    display: flex;
-    justify-content: center;
-}
-nav .logo img {
-    width: 59.1px;
-}
-nav .buttonCrearGifo {
-    width: 10%;
-    display: flex;
-    justify-content: center;
-}
-header {
-    width: 85%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    margin-top: 76px;
-}
-header h2 {
-    font-size: 35px;
-    width: 60%;
-    margin: 0 auto;
-    margin-bottom: 24px;
-}
-header img {
-    width: 399px;
-    height: 190px;
-    margin: 0 auto;
-}
-header .searchInput {
-    width: 60%;
-    display: flex;
-    margin: 0 auto;
-    position: relative;
-    justify-content: center;
-    margin-bottom: 103px;
-}
-header input {
-    border: 1px solid #572EE5;
-    border-radius: 27px;
-    padding: 15px 54px;
-    width: 100%;
-    margin: 0 auto;
-    position: absolute;
-}
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration { 
-    display: none; 
-}
-header input:focus {
-    outline: none;
-}
-
-header .searchInput button img {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    right: 0;
-    margin: 13px 20px 15px 0;
-    cursor: pointer; 
-
-}
-header p {
-    position: relative;
-    
+.gifos-box-button3 {
+    background: url("../assets/icon-max-normal.svg");
+    width: 32px;
+    height: 32px;
 }
