update routes and favorite windows

--- a/style/style.css
+++ b/style/style.css
@@ -320,6 +320,7 @@ html {
     font-weight: 600;
     font-size:  16px;
     margin-bottom: 7px;
+    color: #572ee5;
 }
 .trending-text-a {
     font-family: 'Montserrat', sans-serif;
