--- a/style/style.css
+++ b/style/style.css
@@ -274,6 +274,7 @@ html {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     color: #9CAFC3;
+    cursor: pointer;
 }
 @media screen and (max-width: 767px) {
     .search-container {
@@ -493,6 +494,7 @@ html {
     background: url("../assets/icon-download.svg");
     width: 32px;
     height: 32px;
+    cursor: pointer;
 }
 .gifos-box-button2:hover {
     background: url("../assets/icon-download-hover.svg");
@@ -501,6 +503,7 @@ html {
     background: url("../assets/icon-max-normal.svg");
     width: 32px;
     height: 32px;
+    cursor: pointer;
 }
 .gifos-box-button3:hover {
     background: url("../assets/icon-max-hover.svg");
@@ -643,8 +646,7 @@ html {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: white;
-    opacity: 0.95;
+    background-color: rgba(250, 250, 250);
     z-index: 99;
     top: 0;
     display: none;
@@ -687,12 +689,12 @@ html {
 }
 .gifmax-text {
     color: #000000;
+    text-align: left;
 }
 .gifmax-title {
     font-size: 15px;
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
-    margin-left: 9px;
 }
 .gifmax-user {
     font-size: 15px;
@@ -705,6 +707,7 @@ html {
 }
 .gifmax-button1 {
     background: url("../assets/icon-fav.svg");
+    background-size: contain;
     width: 32px;
     height: 32px;
     cursor: pointer;
@@ -713,12 +716,14 @@ html {
 }
 .gifmax-button1:hover {
     background: url("../assets/icon-fav-hover.svg");
+    background-size: contain;
     width: 32px;
     height: 32px;
     cursor: pointer;
 }
 .gifmax-button2 {
     background: url("../assets/icon-download.svg");
+    background-size: contain;
     width: 32px;
     height: 32px;
     cursor: pointer;
@@ -727,6 +732,7 @@ html {
 }
 .gifmax-button2:hover {
     background: url("../assets/icon-download-hover.svg");
+    background-size: contain;
     width: 32px;
     height: 32px;
     cursor: pointer;
